# TransactionsProject

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/transactions_project/: main.py
src/transactions_project/api/: transactionTypesRoutes.py  transactionsRoutes.py  usersRoutes.py
src/transactions_project/auth/: jwt.py
src/transactions_project/core/: config.py  exception.py
src/transactions_project/crud/: transactionTypesCrud.py  transactionsCrud.py  usersCrud.py
src/transactions_project/db/: base.py  codeBase.py
src/transactions_project/migrations/: env.py
src/transactions_project/migrations/versions/: 48d1415c0070_.py  4952017400bf_.py  620b4e3537e2_.py  6be113c5e38b_.py  7dd5d8b71d9c_.py  fde6a103c8da_.py
src/transactions_project/models/: transactionTypes.py  transactions.py  users.py
src/transactions_project/schemas/: transactionTypeSchemas.py  transactionsSchemas.py  usersSchemas.py
src/transactions_project/services/: emailVerefication.py  security.py  transactionTypes.py  transactions.py  users.py
